--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 Marine Square, FinGlobal Building College Street Hermanus, 7200</span>
             
         </div>
+        <div class="col-4"></div>
         </div>
     </div>
 
