--- a/singnatures/david_signature.html
+++ b/singnatures/david_signature.html
@@ -17,7 +17,7 @@
             <tbody>
                 <tr>
                     <td style="padding: 10px 7px 0px 0px;" width="100px">
-                        <p><img style="width: 100px;" src="images/david_profile_image.png"FinGlobal User Icon"></p>
+                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/david_profile_image.png"FinGlobal User Icon"></p>
                     </td>
                     <td valign="middle"><span
                             style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">David
@@ -41,7 +41,7 @@
                 <tr>
                     <td style="padding-left: 7px;"><a href="https://www.distinctiveaccounting.com/" target="_blank"
                             rel="noopener"><img width="30"
-                                src="images/logo.png"
+                                src="https://distinctiveaccounting.com/images/logo.png"
                                 alt="banner"></a></td>
                     <td style="padding-left: 7px;"><span
                         style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(6, 20, 68);">DISTINCTIVE</span>
