--- a/singnatures/curtley_signature.html
+++ b/singnatures/curtley_signature.html
@@ -16,13 +16,13 @@
         <table style="padding-bottom: 0px;" border="0" cellspacing="0" cellpadding="0px">
             <tbody>
                 <tr>
-                    <td style="padding: 10px 7px 0px 0px;" width="100px">
-                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/singature_img.png"FinGlobal User Icon"></p>
+                    <td style="padding: 7px 0px 0px 0px;" width="100px">
+                        <p><img style="width: 100px;" src="https://www.distinctiveaccounting.com/curtley_signature_image.png"FinGlobal User Icon"></p>
                     </td>
-                    <td valign="middle"><span
+                    <td><span
                             style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Curtley Deelman</span><br><span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
-                            +27 28 125 0226 Ext 3001 &nbsp;</span><br>
+                            +27 28 125 0226 Ext 3001 &nbsp;</span>
                             <br>
                              <a
                             style="font-family: Calibri, sans-serif; text-decoration: none; color: #000; font-size: 13px!important;"
