--- a/singnatures/bongiwe_signature.html
+++ b/singnatures/bongiwe_signature.html
@@ -17,16 +17,16 @@
             <tbody>
                 <tr>
                     <td style="padding: 7px 0px 0px 0px;" width="100px">
-                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/curtley_signature_image.png"FinGlobal User Icon"></p>
+                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/bongiwe_signature_image.png"FinGlobal User Icon"></p>
                     </td>
                     <td><span
-                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Curtley Deelman</span><br><span
+                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Bongiwe Maqolo</span><br><span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
-                            +27 28 125 0226 Ext 3001 &nbsp;</span>
+                            +27 28 125 0226 Ext 3002 &nbsp;</span>
                             <br>
                              <a
                             style="font-family: Calibri, sans-serif; text-decoration: none; color: #000; font-size: 13px!important;"
-                            href="mailto:curtley.deelman@distinctiveaccounting.com" target="_blank" rel="noopener">curtley.deelman@distinctiveaccounting.com</a>
+                            href="mailto:bongiwe.maqolo@distinctiveaccounting.com" target="_blank" rel="noopener">bongiwe.maqolo@distinctiveaccounting.com</a>
                     </td>
                 </tr>
             </tbody>
