--- a/singnatures/david_signature.html
+++ b/singnatures/david_signature.html
@@ -17,7 +17,7 @@
             <tbody>
                 <tr>
                     <td style="padding: 10px 7px 0px 0px;" width="100px">
-                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/david_signature_image.png"FinGlobal User Icon"></p>
+                        <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/david_signature_image.png"></p>
                     </td>
                     <td valign="middle"><span
                             style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">David
