--- a/singnatures/david_signature.html
+++ b/singnatures/david_signature.html
@@ -49,8 +49,8 @@
                         style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(112, 69, 69);">ACCOUNTING</span></td>
                 </tr>
             </tbody>
-        </table><span style="padding-left: 7px;color: rgb(0, 51, 102); font-family: EB Garamond, sans-serif; font-size: 11px;">Marine Square, FinGlobal Building
-            College Street
+        </table><span style="padding-left: 7px;color: rgb(0, 51, 102); font-family: EB Garamond, sans-serif; font-size: 11px;">Marine Square, FinGlobal Building,
+            College Street,
             Hermanus, 7200</span>
         
             
