--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <link rel="icon" href="images/logo.png">
+    <meta name="keywords" content="Accountants, South Africa"/>
+    <meta name="author" content="Distinctive Accounting"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Distinctive Accounting - South African Institute of Professional Accountants">
-    
+    <!--Replace with your tailwind.css once created-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <title>Distinctive Accounting</title>
 </head>
 
-<body>
+<body class="leading-normal">
+ <div class="container">
+    <img src="images/main_banner.png" class="img-fluid" alt="Responsive image">
+ </div>
+ <br>
     <div class=container>
         <div style="background-color: rgba(68, 64, 64, 0.1);">
             <div class="text-center">
@@ -25,44 +31,9 @@
                     style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(112, 69, 69);">ACCOUNTING</span>
             </div>
             <div class="text-center">
-            <p>Kindly note, this site is still under construction</p>
-        </div>
-        </div>
-        <div class="row">
-
-        <div class="col-4"></div>
-        <div class="col-8">
-            <table style="padding-bottom: 0px;" border="0" cellspacing="0" cellpadding="0px">
-                <tbody>
-                    <tr>
-                        <td style="padding: 10px 7px 0px 0px;" width="100px">
-                            <p><img style="width: 100px;" src="images/david_profile_image.png"FinGlobal User Icon"></p>
-                        </td>
-                        <td valign="middle"><span
-                                style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">David
-                                    Cupido</span><br><span
-                                style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000; font-weight: bold;">Professional Accountant (SA)<br>Professional Tax Practitioner (SA)</span>
-                            <br> <span
-                                style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
-                                +27 28 125 0226 Ext 3000 &nbsp;</span><br>
-                                <span
-                                style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">
-                                Cell +27 74 100 4443 &nbsp;</span><br>
-                                 <a
-                                style="font-family: Calibri, sans-serif; text-decoration: none; color: #000; font-size: 13px!important;"
-                                href="mailto:david.cupido@distinctiveaccounting.com" target="_blank" rel="noopener">david.cupido@distinctiveaccounting.com</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <span style="padding-left: 7px;color: rgb(0, 51, 102); font-family: EB Garamond, sans-serif; font-size: 11px;">
-                Marine Square, FinGlobal Building College Street Hermanus, 7200</span>
-            
-        </div>
-        <div class="col-4"></div>
+            <p>Kindly note, this site is under construction</p>
         </div>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
