--- a/singnatures/bongiwe_signature.html
+++ b/singnatures/bongiwe_signature.html
@@ -20,7 +20,10 @@
                         <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/bongiwe_signature_image.png"></p>
                     </td>
                     <td><span
-                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Bongiwe Maqolo</span><br><span
+                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Bongiwe Maqolo</span>
+                            <br> <span
+                            style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000; font-weight: bold;">
+                        Junior Accountant</span><br><span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
                             +27 28 125 0226 Ext 3002 &nbsp;</span>
                             <br>
@@ -35,13 +38,13 @@
             <tbody>
                 <tr>
                     <td style="padding-left: 7px;"><a href="https://distinctiveaccounting.com/" target="_blank"
-                            rel="noopener"><img width="30"
-                                src="https://distinctiveaccounting.com/images/logo.png"
+                            rel="noopener"><img width="30" src="https://distinctiveaccounting.com/images/logo.png"
                                 alt="banner"></a></td>
                     <td style="padding-left: 7px;"><span
-                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(6, 20, 68);">DISTINCTIVE</span>
+                            style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(10, 21, 35);">DISTINCTIVE</span>
                         <span
-                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(112, 69, 69);">ACCOUNTING</span></td>
+                            style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(69, 11, 13);">ACCOUNTING</span>
+                    </td>
                 </tr>
             </tbody>
         </table><span style="padding-left: 7px;color: rgb(0, 51, 102); font-family: EB Garamond, sans-serif; font-size: 11px;">Marine Square, FinGlobal Building,
