--- a/singnatures/curtley_signature.html
+++ b/singnatures/curtley_signature.html
@@ -20,7 +20,9 @@
                         <p><img style="width: 100px;" src="https://distinctiveaccounting.com/images/curtley_signature_image.png"></p>
                     </td>
                     <td><span
-                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Curtley Deelman</span><br><span
+                            style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Curtley Deelman</span>
+                            <br><span
+                            style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000; font-weight: bold;">Professional Accountant (SA)<br>Professional Tax Practitioner (SA)</span><br><span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
                             +27 28 125 0226 Ext 3001 &nbsp;</span>
                             <br>
@@ -39,9 +41,9 @@
                                 src="https://distinctiveaccounting.com/images/logo.png"
                                 alt="banner"></a></td>
                     <td style="padding-left: 7px;"><span
-                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(6, 20, 68);">DISTINCTIVE</span>
+                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(10, 21, 35);">DISTINCTIVE</span>
                         <span
-                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(112, 69, 69);">ACCOUNTING</span></td>
+                        style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(69, 11, 13);">ACCOUNTING</span></td>
                 </tr>
             </tbody>
         </table><span style="padding-left: 7px;color: rgb(0, 51, 102); font-family: EB Garamond, sans-serif; font-size: 11px;">Marine Square, FinGlobal Building,
