Updates to titles

--- a/singnatures/bongiwe_signature.html
+++ b/singnatures/bongiwe_signature.html
@@ -23,7 +23,7 @@
                             style="font-family: Calibri, sans-serif; font-size: 18px; margin-bottom: 0px; margin-top: 0px; color: rgb(6, 20, 68);">Bongiwe Maqolo</span>
                             <br> <span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000; font-weight: bold;">
-                        Junior Accountant</span><br><span
+                            Trainee Accountant</span><br><span
                             style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
                             +27 28 125 0226 Ext 3002 &nbsp;</span>
                             <br>
