--- a/singnatures/curtley_signature.html
+++ b/singnatures/curtley_signature.html
@@ -27,7 +27,7 @@
                         Deelman</span>
                     <br><span
                         style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000; font-weight: bold;">
-                    Junior Accountant</span><br><span
+                        Trainee Accountant</span><br><span
                         style="font-family: Calibri, sans-serif; font-size: 13px; line-height: 20px; color: #000;">Tel
                         +27 28 125 0226 Ext 3001 &nbsp;</span>
                     <br>
