Distincitve accounting redirect.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="Refresh" content="0; url='https://distinctacc.co.za/'" />
     <link rel="icon" href="images/logo.png">
     <meta name="keywords" content="Accountants, South Africa" />
     <meta name="author" content="Distinctive Accounting" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Distinctive Accounting - South African Institute of Professional Accountants">
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com; script-src 'self'  https://stackpath.bootstrapcdn.com; script-src 'self' https://code.jquery.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://stackpath.bootstrapcdn.com; img-src 'self' data:; object-src 'none'; base-uri 'self';">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="deny">
-    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <!-- Bootstrap CSS -->
