--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <!-- Required meta tags -->
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; env=HTTPS">
     <meta charset="utf-8">
     <meta http-equiv="Refresh" content="0; url='https://distinctacc.co.za/'" />
     <link rel="icon" href="images/logo.png">
