Redirect to other page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; env=HTTPS">
     <meta charset="utf-8">
-    <meta http-equiv="Refresh" content="0; url='https://distinctacc.co.za/'" />
+    <meta http-equiv="Refresh" content="0; url='https://dc-accounting.co.za/'" />
     <link rel="icon" href="images/logo.png">
     <meta name="keywords" content="Accountants, South Africa" />
     <meta name="author" content="Distinctive Accounting" />
@@ -38,8 +38,8 @@
                     style="font-family: Cormorant Garamond; font-size: 20px; line-height: 20px; color: rgb(112, 69, 69);">ACCOUNTING</span>
             </div>
             <div class="text-center">
-                <p>Redirecting you to our official site. https://distinctacc.co.za/</p>
-                <a href="https://distinctacc.co.za/">Click here</a> if you aren't redirected automatically.
+                <p>Redirecting you to our official site. https://dc-accounting.co.za/</p>
+                <a href="https://dc-accounting.co.za/">Click here</a> if you aren't redirected automatically.
             </div>
         </div>
         <!-- Optional JavaScript -->
@@ -55,7 +55,7 @@
             crossorigin="anonymous"></script>
         <script>
             function myFunction() {
-                location.replace("https://distinctacc.co.za/")
+                location.replace("https://dc-accounting.co.za/")
             }
             myFunction()
         </script>
